Trying to fix some issues with the Flexbox on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -191,6 +191,7 @@ SECTION THREE -- ONLY
 
 .fb {
   flex-grow: 1;
+  order: -1;
 }
 
 .fb-card {
